--- a/wp-content/themes/yana/resources/styles/app.scss
+++ b/wp-content/themes/yana/resources/styles/app.scss
@@ -1,2 +1,6 @@
 @import "bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.scss";
+
 @import "common/variables";
+@import "common/carousels";
+@import "common/social-icons";
