--- a/wp-content/themes/yana/resources/styles/common/_variables.scss
+++ b/wp-content/themes/yana/resources/styles/common/_variables.scss
@@ -28,6 +28,17 @@
     }
 }
 
+// Content
+@include media-breakpoint-up(sm) {
+    .single {
+        & .entry-content {
+            & .container {
+                max-width: 768px;
+            }
+        }
+    }
+}
+
 // Priority Position Avsolute
 .z-index- {
     &5 {
