--- a/wp-content/themes/yana/style.css
+++ b/wp-content/themes/yana/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
+Theme Name:         Hamanami Company Profile
+Theme URI:          https://hamanami.arthurimmanuel.com/yana
+Description:        Company profile WordPress starter theme.
 Version:            10.1.6
-Author:             Roots
-Author URI:         https://roots.io/
+Author:             Arthur Immanuel
+Author URI:         https://arthurimmanuel.com
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
