Change Theme Name

--- a/wp-content/themes/yana/style.css
+++ b/wp-content/themes/yana/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         Hamanami Company Profile
+Theme Name:         Hamanami Yana
 Theme URI:          https://hamanami.arthurimmanuel.com/yana
 Description:        Company profile WordPress starter theme.
 Version:            10.1.6
