--- a/wp-content/themes/yana/resources/styles/common/_variables.scss
+++ b/wp-content/themes/yana/resources/styles/common/_variables.scss
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,700&display=swap');
 
+/** SVG Logo */
+.logo-icon {
+	max-width: 2.5rem;
+}
+
 // Navigation
 @include media-breakpoint-up(sm) {
     .nav-lg-fill {
