--- a/wp-content/themes/yana/resources/styles/common/_variables.scss
+++ b/wp-content/themes/yana/resources/styles/common/_variables.scss
@@ -1,6 +1,25 @@
+/** Import Bootstrap functions */
+@import "~bootstrap/scss/functions";
+
+/** Theme Colors */
+$theme-colors: (
+    primary     : #0d6efd,
+    secondary   : #6c757d,
+    success     : #6610f2,
+    info        : #00d084,
+    sky-blue    : #00b7ef,
+    warning     : #f7c32e,
+    danger      : #f00778,
+    light       : #f8f9fa,
+    dark        : #212529,
+);
+
 /** Typography */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,700&display=swap');
+$noto-sans-font                 : "Noto Sans", Segoe UI, system-ui, -apple-system, sans-serif !default;
+$lora-font                      : Lora, Georgia , Times New Roman, Times, serif !default;
+$font-family-sans-serif         : $noto-sans-font;
+$headings-font-family           : $lora-font;
+$headings-font-weight           : 700 !default;
 
 /** SVG Logo */
 .logo-icon {
@@ -8,7 +27,7 @@
 }
 
 // Navigation
-@include media-breakpoint-up(sm) {
+@media(min-width:576px) {
     .nav-lg-fill {
         & .nav-item {
             flex: 1 1 auto;
@@ -40,7 +59,7 @@
 }
 
 // Content
-@include media-breakpoint-up(sm) {
+@media(min-width:576px) {
     .single {
         & .entry-content {
             & .container {
@@ -56,7 +75,7 @@
         color: #eee;
         display: block;
         font-size: 8.75rem;
-        font-weight: 800;
+        font-weight: 700;
         line-height: 0.8;
         margin-bottom: 1.25rem;
     }
@@ -72,7 +91,7 @@
     font-weight: 700;
     line-height: 1.1;
 }
-@include media-breakpoint-up(lg) {
+@media(min-width:1200px) {
     .page-error-404 {
         & h1 {
             font-size: 18.75rem;
